# TalkwithDB-NL-to-SQL

./: ASSIGNMENT_REPORT.md  README.md  agent-context.json  chat_optimized.py  chat_ui_enhanced.py  chat_v3.py  context.md  data-context.json  improvements_summary.py  main.py  next_plan.md  pyproject.toml  pyrightconfig.json  readme-summary.json  requirements-all.txt  setup.md  ui_demo.py
TalkwithDB-version5/: .gitignore  DATABASE_SHOWCASE_SQL.md  INTERVIEW_GUIDE_TALKWITHDB.md  README.md
apps/: api.py  ui.py
chat_sql/: .env.example  README.md  app.py  chat_cli.py  config.py  setup_database.py  setup_ollama.py  test_rich_data.py
chat_sql/db/: connection.py  schema_loader.py
chat_sql/llm/: result_formatter.py  sql_generator.py
chat_sql/pipeline/: chat_with_sql.py
chat_sql/rag/: embedder.py  retriever.py  vector_store.py
chat_sql/safety/: sql_validator.py
data/: schema_vectors.faiss  schema_vectors.pkl  schema_vectors_metadata.json
data/mock/: mock_data.sql
data/schema_snapshots/: snapshot_20260218_174615.json  snapshot_20260219_235445.json  snapshot_20260424_171457.json  snapshot_20260424_183555.json  snapshot_20260424_225631.json
desktop_v4/: DESKTOP_CONTEXT.md  README.md  __init__.py  app.py
desktop_v4/services/: connection_service.py  history_service.py  postgres_client.py  query_pipeline.py  schema_service.py
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml  init.sql  nginx.conf
docs/architecture/: database-design.md  system-design.md  workflow.md
docs/development/: contributing.md  setup-guide.md  testing.md
scripts/: README.md  generate_large_mock_data.py  generate_mock_data.py  init_db.py  pull_models.py  setup_database_large.py  view_database.py
src/chat_sql/: .env.example  README.md  __init__.py  config.py  requirements.txt
src/chat_sql/api/: app.py
src/chat_sql/core/: __init__.py  chat_with_sql.py  optimized_pipeline.py  schema_manager.py
src/chat_sql/db/: __init__.py  connection.py  schema_loader.py
src/chat_sql/llm/: __init__.py  result_formatter.py  sql_generator.py
src/chat_sql/rag/: __init__.py  advanced_rag.py  embedder.py  optimized_retriever.py  optimized_vector_store.py  retriever.py  vector_store.py
src/chat_sql/safety/: __init__.py  sql_validator.py
tests/: conftest.py  test_api_simple.py  test_chat.py  test_improvement.py  test_optimizations.py  test_system.py
tests/integration/: test_pipeline.py
tests/unit/: test_sql_validator.py
training/: Modelfile  README.md  export_to_ollama.py  prepare_data.py  requirements.txt  train_sql_low_vram.py
