[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--disable-warnings",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov"
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (database required)",
    "e2e: End-to-end tests (full system)",
    "slow: Tests that take more than 1 second",
    "security: Security-focused tests",
    "performance: Performance tests"
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "ollama.*",
    "faiss.*",
    "psycopg2.*",
    "pg8000.*",
]
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "chat-sql"
version = "1.0.0"
description = "RAG-based Natural Language to SQL System"
authors = [
    {name = "Chat SQL Team", email = "dev@company.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.4.0",
    "psycopg2-binary>=2.9.9",
    "pg8000>=1.31.2",
    "numpy>=1.24.0",
    "faiss-cpu>=1.7.4",
    "requests>=2.31.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "streamlit>=1.28.0",
    "pandas>=2.1.0",
    "plotly>=5.17.0",
    "websockets>=12.0",
    "sqlalchemy>=2.0.0",
    "langchain>=0.0.325",
    "langchain-community>=0.0.10",
    "ollama>=0.1.0",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.3.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "prometheus-client>=0.18.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0"
]

[project.urls]
Homepage = "https://github.com/adityatiwari12/TalkwithDB"
Repository = "https://github.com/adityatiwari12/TalkwithDB"
Documentation = "https://github.com/adityatiwari12/TalkwithDB#readme"

[project.scripts]
chat-sql = "src.chat_sql.cli:main"
